fix: fixed device flicker

--- a/src/components/ui/app-bar.pcss
+++ b/src/components/ui/app-bar.pcss
@@ -58,15 +58,24 @@ header {
 
 .menu {
   .details {
-    margin-bottom: 2ex;
+    margin-bottom: 4ex;
   }
 
   h2 {
     font-size: 3ex;
-	i {
-		line-height: 2ex;
-		font-size: 1.5ex;
-		opacity: .5;
+    span {
+      position: absolute;
+      padding-top: 0.2ex;
+    }
+    sub {
+      line-height: 2ex;
+      font-size: 1ex;
+      opacity: 0.5;
+      position: absolute;
+      margin-top: 0.2ex;
+    }
+	img {
+		margin-right: .6ex;
 	}
   }
 }
